--- a/src/styles/Landing.css
+++ b/src/styles/Landing.css
@@ -17,3 +17,38 @@
   height: 100vh;
   background: linear-gradient(#ffffff00, #000000);
 }
+.landing-outer-overlay-box {
+  width: 100%;
+  height: 800px;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  display: flex;
+  justify-content: center;
+}
+.ip-box {
+  width: 100%;
+  height: 30px;
+  background-color: #3f464b;
+  position: absolute;
+  top: 61px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 16px;
+  color: white;
+  font-weight: 400;
+  letter-spacing: 1px;
+}
+.ip-box:hover {
+  cursor: pointer;
+}
+.copy-ip {
+  width: 200px;
+  height: 30px;
+  position: absolute;
+  top: 90px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
