--- a/src/styles/Landing.css
+++ b/src/styles/Landing.css
@@ -52,3 +52,29 @@
   align-items: center;
   justify-content: center;
 }
+.header {
+  font-size: 100px;
+  color: white;
+  width: 600px;
+  height: 600px;
+  text-align: center;
+  position: absolute;
+  top: 150px;
+  display: flex;
+  flex-wrap: wrap;
+  font-weight: 900;
+}
+.countdown {
+  width: 341px;
+  height: 51px;
+  background-color: #2a2e31;
+  position: absolute;
+  top: 620px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-weight: 700;
+  font-size: 18px;
+  padding-left: 40px;
+}
