--- a/src/styles/Landing.css
+++ b/src/styles/Landing.css
@@ -56,13 +56,29 @@
   font-size: 100px;
   color: white;
   width: 600px;
-  height: 600px;
+  height: 450px;
   text-align: center;
   position: absolute;
   top: 150px;
   display: flex;
   flex-wrap: wrap;
   font-weight: 900;
+}
+.line-one,
+.line-two,
+.line-three {
+  width: 100%;
+  height: 33%;
+  transition: 0.3s;
+}
+.l {
+  transition: 0.5s;
+  position: relative;
+}
+.l:hover {
+  cursor: default;
+  /* font-size: 120px;
+  top: 0px; */
 }
 .countdown {
   width: 341px;
@@ -77,6 +93,7 @@
   font-weight: 700;
   font-size: 18px;
   padding-left: 40px;
+  z-index: 2;
 }
 footer {
   width: 100%;
@@ -130,4 +147,40 @@ footer {
   height: 250px;
   right: -150px;
   bottom: -50px;
+}
+.icons-outer {
+  width: 1200px;
+  height: 200px;
+  position: absolute;
+  top: 68vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.maze-box,
+.sword-box {
+  width: 150px;
+  height: 150px;
+}
+.maze-icon,
+.sword-icon {
+  width: 100%;
+  height: 100%;
+  color: rgba(255, 255, 255, 0.534);
+  transition: 0.3s;
+}
+.maze-text,
+.sword-text {
+  margin-top: 10px;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  color: rgb(255, 255, 255, 0.5);
+}
+.maze-icon:hover,
+.sword-icon:hover {
+  width: 100%;
+  height: 100%;
+  color: rgb(255, 255, 255);
+  transition: 0.3s;
 }
