--- a/src/styles/Landing.css
+++ b/src/styles/Landing.css
@@ -56,7 +56,7 @@
   font-size: 100px;
   color: white;
   width: 600px;
-  height: 450px;
+  height: 400px;
   text-align: center;
   position: absolute;
   top: 150px;
@@ -74,6 +74,7 @@
 .l {
   transition: 0.5s;
   position: relative;
+  padding: 0px 0px;
 }
 .l:hover {
   cursor: default;
