--- a/src/styles/Forum.css
+++ b/src/styles/Forum.css
@@ -9,7 +9,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
 }
+
 .stats {
   width: 100%;
   height: 30px;
@@ -23,20 +25,6 @@
   align-items: center;
   justify-content: space-around;
 }
-.forum-box-one {
-  width: 700px;
-  height: 80vh;
-  background-color: #3f464b;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  align-content: flex-start;
-  padding: 40px 20px;
-  position: absolute;
-  top: 150px;
-  margin-left: -20%;
-  overflow: auto;
-}
 .box-one-header {
   text-align: center;
   width: 30%;
@@ -48,7 +36,7 @@
   justify-content: center;
   color: white;
   border-radius: 5px;
-  right: 50px;
+  right: 7%;
   transition: 0.3s;
 }
 .box-one-header:hover {
@@ -65,7 +53,7 @@
   justify-content: center;
   font-size: 40px;
   padding: 15px;
-  margin-left: 30px;
+  margin-left: 5%;
   border-radius: 50%;
 }
 .welcome-to-forum {
@@ -94,4 +82,63 @@
   height: 50px;
   margin-top: -5px;
   width: 92%;
+}
+.forum-outer-inner {
+  width: 100%;
+  height: 80%;
+  position: absolute;
+  background-color: #1e2022;
+  top: 140px;
+  left: 0px;
+  z-index: 3;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.forum-box-one {
+  width: 40%;
+  height: 100%;
+  background-color: #3f464b;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-content: flex-start;
+  padding: 40px 20px;
+  position: relative;
+  overflow: auto;
+}
+
+.forum-box-two {
+  width: 400px;
+  height: 100%;
+  position: relative;
+  margin-left: 2%;
+  display: flex;
+  align-self: flex-start;
+  flex-wrap: wrap;
+}
+.forum-box-two-top {
+  width: 100%;
+  height: 40%;
+  background-color: #3f464b;
+  display: flex;
+  align-self: flex-start;
+}
+.forum-box-two-ranks {
+  width: 100%;
+  height: 55%;
+  background-color: #3f464b;
+  display: flex;
+  align-self: flex-end;
+}
+.top-heading,
+.ranks-heading {
+  width: 100%;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  font-weight: 600;
+  border-bottom: 1px solid black;
 }
